@@ -1,3 +1,7 @@
+2008-08-24  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* gendarme.1.in: Document --ignore and --version options.
+
 2008-04-12  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* gendarme.1.in: Document GENDARME_COLOR environment variable.
